dist_man1_MANS=

if BUILD_DEVCOIND
  dist_man1_MANS+=devcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=devcoin-qt.1
endif

if BUILD_DEVCOIN_CLI
  dist_man1_MANS+=devcoin-cli.1
endif

if BUILD_DEVCOIN_TX
  dist_man1_MANS+=devcoin-tx.1
endif

if BUILD_DEVCOIN_UTIL
  dist_man1_MANS+=devcoin-util.1
endif

if ENABLE_WALLET
if BUILD_DEVCOIN_WALLET
  dist_man1_MANS+=devcoin-wallet.1
endif
endif
